--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.18",
+    "axios": "^1.7.9",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.3",
+    "mongodb": "^6.13.0",
     "next": "14.1.3",
     "postcss": "8.4.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.0.1",
+    "sharp": "^0.33.5",
     "tailwindcss": "3.4.1"
   }
 }
