--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "autoprefixer": "10.4.18",
@@ -21,5 +22,8 @@
     "react-icons": "^5.0.1",
     "sharp": "^0.33.5",
     "tailwindcss": "3.4.1"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
