--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/jest": "^29.5.14",
     "autoprefixer": "10.4.18",
     "axios": "^1.7.9",
     "eslint": "8.57.0",
@@ -21,9 +22,16 @@
     "react-dom": "18.2.0",
     "react-icons": "^5.0.1",
     "sharp": "^0.33.5",
-    "tailwindcss": "3.4.1"
+    "tailwindcss": "3.4.1",
+    "ts-jest": "^29.2.6"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "@types/aws-lambda": "^8.10.147",
+    "@types/mongodb": "^4.0.7",
+    "@types/node": "^22.13.8",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "jest": "^29.7.0",
+    "typescript": "^5.8.2"
   }
 }
